package SitsFramework.config;

public class Config {
    public static final double LONG_MIN = -53.5;
    public static final double LAT_MIN = -29.4;
    public static final double LONG_MAX = -48.3;
    public static final double LAT_MAX = -25.8;
    public static final String OUTPUT_DIR = "./imagens";
}
