@startuml SitsFrameworkController


class ImageApiController {
    +config: Config
    +buscarImagens(): List<ImageMeta>
    +baixarImagens(lista: List<ImageMeta>): void
    +processarImagens(tipo: TipoProcessamento): void
}

class ImageDownloader {
    +download(fileUrl: String, destino: String): void
}

class Config {
    +LONG_MIN: double
    +LAT_MIN: double
    +LONG_MAX: double
    +LAT_MAX: double
    +OUTPUT_DIR: String
}

class ImageProcessingUtils {
    +toGray(img: BufferedImage): BufferedImage
    +binarize(img: BufferedImage, threshold: int): BufferedImage
    +edgeDetect(img: BufferedImage): BufferedImage
    +negativo(img: BufferedImage): BufferedImage
    +contraste(img: BufferedImage): BufferedImage
}

class ImageMeta {
    +url: String
    +title: String
    +date: String
    +fileSize: long
}

enum TipoProcessamento {
    CINZA
    BINARIZACAO
    BORDA
    NEGATIVO
    CONTRASTE
}

ImageApiController "1" o-- "0..1" Config
ImageApiController "1" o-- "0..N" ImageMeta
ImageApiController "1" ..> "0..N" ImageDownloader
ImageApiController "1" ..> "0..N" ImageProcessingUtils
ImageApiController "1" ..> "1" TipoProcessamento
ImageDownloader "1" ..> "1" Config

@enduml
